--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <p>This is a basic HTML page.</p>
 
     <canvas width="1000" height="1000" id="myCanvas"></canvas>
+
+    <h2>TO DO :</h2>
+    <ul>
+        <li>Comprendre le paramètre du temps pour avoir une gestion précise de la fréquence (nombre de tour par seconde)</li>
+        <li>Corriger le "bug" de display plus rapide en fonction du framerate de l'écran</li>
+        <li>Pouvoir paramétrer toutes les variables</li>
+        <li>Pouvoir le faire via l'UI</li>
+        <li>Avoir un belle UI</li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
